[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-openenv-sign-lang"
version = "0.1.0"
description = "Sign Language Interpreter Environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
